ajout d'images (perso) modif musique menu

--- a/King_Colin/King_Colin.csproj
+++ b/King_Colin/King_Colin.csproj
@@ -32,6 +32,9 @@
     <None Update="Musique\TheDying.mp3">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Update="Musique\TheDying2.mp3">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
